syntax = "proto3";

option go_package = "/pb;block";

message RequestID {
  string id = 1;
}

message ResponseBlock {
  string id = 1;
  string parentId = 2;
}

service Blocks {
  rpc GetBlockById(RequestID) returns (ResponseBlock){}
}
